--- a/devU-client/src/components/utils/darkModeToggle.scss
+++ b/devU-client/src/components/utils/darkModeToggle.scss
@@ -1,4 +1,6 @@
 .toggle {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 20px;
+  color: #F8D487;
 }
+
